# Cataloging_Project

./: .env.example  .gitignore  README.md  control_number_counter.json  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  control_number_counter.json  main.py  pyproject.toml
backend/dublin_core_module/: __init__.py  converters.py  validator.py
backend/dublin_core_module/config/: __init__.py  settings.py
backend/dublin_core_module/core/: __init__.py  base_mapper.py  dc_record.py
backend/dublin_core_module/mappers/: __init__.py  descriptive.py  publication.py  technical.py
backend/dublin_core_module/pipeline/: __init__.py  dc_pipeline.py
backend/dublin_core_module/utils/: __init__.py  normalizers.py
backend/extract_module/: README.md  extract_main.py  main.py  requirements.txt  test_1_file.py
backend/extract_module/config/: model_config.py  settings.py
backend/extract_module/core/: orchestrator.py
backend/extract_module/tests/: conftest.py  test_adapters.py  test_data_parser.py  test_dublincore.py  test_ocr_adapter.py  test_orchestrator.py
backend/extract_module/utils/: exceptions.py  logger.py
backend/mapping_module/: extraction_schema.json  main.py  mapping_module.txt  quiet_logging.py  requirements.txt
backend/mapping_module/LCC_and_NLM/: __init__.py  rag_engine.py  scraper.py
backend/mapping_module/config/: __init__.py  settings.py
backend/mapping_module/core/: __init__.py  base_mapper.py  converters.py  models.py  rag_bridge.py  serializers.py
backend/mapping_module/mappers/: __init__.py  author_fields.py  control_fields.py  (+6 more)
(+89 files in other folders)
