[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.137.1",
    "fpdf2>=2.8.7",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "openai>=2.41.1",
    "paddleocr>=3.7.0",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pymarc>=5.3.1",
    "pymupdf>=1.27.2.3",
    "pypdfium2>=5.10.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
